feat:implement sql null exception in database review data #31
