# controllers/api/v1/app_controller.go
@@ -35,18 +35,20 @@ func NewAppController(goqu *goqu.Database, logger *zap.Logger) (*AppController, 
 	}, nil
 }
 
-// GetApp retrieves a single app by its ID.
+// GetApp retrieves a single app by ID.
 //
-//	@Summary		Get App by ID
-//	@Description	Retrieves a single app from the database.
+//	@Summary		Get App
+//	@Description	Fetches an app by its ID.
 //	@Tags			Apps
+//	@Accept			json
 //	@Produce		json
-//	@Param		appid	path		int	true	"App ID"
+//	@Param			id	path	int	true	"App ID"
 //	@Success		200	{object}	models.App
 //	@Failure		400	{object}	utils.JSONResponse
 //	@Failure		404	{object}	utils.JSONResponse
 //	@Failure		500	{object}	utils.JSONResponse
-//	@Router			/v1/apps/{appid} [get]
+//	@Router			/api/v1/apps/{id} [get]
+
 func (ac *AppController) GetApp(c *fiber.Ctx) error {
 	appID, err := c.ParamsInt(constants.ParamAppID) // Use c.ParamsInt
 	if err != nil {
@@ -64,17 +66,19 @@ func (ac *AppController) GetApp(c *fiber.Ctx) error {
 	return utils.JSONSuccess(c, http.StatusOK, app)
 }
 
-// GetApps retrieves all apps.
-//	@Summary		Get All Apps
-//	@Description	Retrieves a list of apps from the database.  Supports pagination.
+// GetApps fetches a list of apps.
+//
+//	@Summary		Get Apps
+//	@Description	Retrieves a paginated list of apps from the database.
 //	@Tags			Apps
+//	@Accept			json
 //	@Produce		json
-//	@Param		limit	query	int	false	"Maximum number of apps to retrieve"	default(10)
-//	@Param		offset	query	int	false	"Starting position for retrieving apps"	default(0)
-//	@Success		200	{object}	[]models.App
+//	@Param			limit	query		int	false	"Number of records to return"
+//	@Param			page	query		int	false	"Page number"
+//	@Success		200	{array}	models.App
 //	@Failure		400	{object}	utils.JSONResponse
 //	@Failure		500	{object}	utils.JSONResponse
-//	@Router			/v1/apps [get]
+//	@Router			/api/v1/apps [get]
 
 func (ac *AppController) GetApps(c *fiber.Ctx) error {
 	limit, err := strconv.Atoi(c.Query("limit", strconv.Itoa(constants.DefaultLimit))) // Use constants
@@ -97,10 +101,10 @@ func (ac *AppController) GetApps(c *fiber.Ctx) error {
 	return utils.JSONSuccess(c, http.StatusOK, apps)
 }
 
-// CreateAppData handles the creation of new app data.
+// CreateApp creates a new app.
 //
-//	@Summary		Create App Data
-//	@Description	Creates a new app data entry in the database.
+//	@Summary		Create App
+//	@Description	Creates a new application entry in the database.
 //	@Tags			Apps
 //	@Accept			json
 //	@Produce		json
@@ -108,8 +112,9 @@ func (ac *AppController) GetApps(c *fiber.Ctx) error {
 //	@Success		201	{object}	models.App
 //	@Failure		400	{object}	utils.JSONResponse
 //	@Failure		500	{object}	utils.JSONResponse
-//	@Router			/v1/apps [post]
-func (ac *AppController) CreateAppData(c *fiber.Ctx) error {
+//	@Router			/api/v1/apps [post]
+
+func (ac *AppController) CreateApp(c *fiber.Ctx) error {
 	var appReq models.App // Use the App struct from your models
 
 	// Parse the request body into the App struct.
@@ -139,18 +144,20 @@ func (ac *AppController) CreateAppData(c *fiber.Ctx) error {
 	return utils.JSONSuccess(c, http.StatusCreated, insertedApp)
 }
 
-// DeleteApp deletes an app by its ID.
+// DeleteApp deletes an app by ID.
 //
-//	@Summary		Delete App by ID
-//	@Description	Deletes a single app from the database by its ID.
+//	@Summary		Delete App
+//	@Description	Removes an app from the database.
 //	@Tags			Apps
+//	@Accept			json
 //	@Produce		json
-//	@Param		appid	path	int	true	"App ID"
+//	@Param			id	path	int	true	"App ID"
 //	@Success		200	{object}	utils.JSONResponse
 //	@Failure		400	{object}	utils.JSONResponse
 //	@Failure		404	{object}	utils.JSONResponse
 //	@Failure		500	{object}	utils.JSONResponse
-//	@Router			/v1/apps/{appid} [delete]
+//	@Router			/api/v1/apps/{id} [delete]
+
 func (ac *AppController) DeleteApp(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(c.Params(constants.ParamAppID))
 	if err != nil {
@@ -174,17 +181,18 @@ func (ac *AppController) DeleteApp(c *fiber.Ctx) error {
 // UpdateApp updates an existing app.
 //
 //	@Summary		Update App
-//	@Description	Updates an existing app in the database.
+//	@Description	Updates app data in the database.
 //	@Tags			Apps
 //	@Accept			json
 //	@Produce		json
-//	@Param		appid 	path		int			true	"App ID"
-//	@Param		app		body		models.App	true	"Updated app data"
+//	@Param			id		path	int			true	"App ID"
+//	@Param			app		body	models.App	true	"Updated app data"
 //	@Success		200	{object}	models.App
 //	@Failure		400	{object}	utils.JSONResponse
 //	@Failure		404	{object}	utils.JSONResponse
 //	@Failure		500	{object}	utils.JSONResponse
-//	@Router			/v1/apps/{appid} [put]
+//	@Router			/api/v1/apps/{id} [put]
+
 func (ac *AppController) UpdateApp(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(c.Params(constants.ParamAppID))
 	if err != nil {
