# docs/swagger.json
@@ -4,53 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/reviews": {
-            "post": {
-                "description": "Creates a new review data entry in the database.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reviews"
-                ],
-                "summary": "Create Review Data",
-                "parameters": [
-                    {
-                        "description": "Review data to create",
-                        "name": "review",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Review"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.Review"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/reviews/{reviewid}": {
+        "/api/v1/reviews/{id}": {
             "put": {
                 "description": "Updates an existing review in the database.",
                 "consumes": [
@@ -107,385 +61,18 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "description": "Deletes a review from the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reviews"
-                ],
-                "summary": "Delete Review by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Review ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/apps": {
-            "post": {
-                "description": "Creates a new app data entry in the database.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Apps"
-                ],
-                "summary": "Create App Data",
-                "parameters": [
-                    {
-                        "description": "App data to create",
-                        "name": "app",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.App"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/models.App"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/apps/{appid}": {
-            "get": {
-                "description": "Retrieves a single app from the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Apps"
-                ],
-                "summary": "Get App by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "App ID",
-                        "name": "appid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.App"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Updates an existing app in the database.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Apps"
-                ],
-                "summary": "Update App",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "App ID",
-                        "name": "appid",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Updated app data",
-                        "name": "app",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.App"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.App"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Deletes a single app from the database by its ID.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Apps"
-                ],
-                "summary": "Delete App by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "App ID",
-                        "name": "appid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/reviews": {
-            "get": {
-                "description": "Retrieves a list of all reviews from the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reviews"
-                ],
-                "summary": "Get All Reviews",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Review"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/reviews/{reviewid}": {
-            "get": {
-                "description": "Retrieves a single review from the database.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Reviews"
-                ],
-                "summary": "Get Review by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Review ID",
-                        "name": "reviewid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Review"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.JSONResponse"
-                        }
-                    }
-                }
             }
         }
     },
     "definitions": {
-        "models.App": {
+        "models.NullableFloat64": {
             "type": "object",
-            "required": [
-                "android_ver",
-                "app",
-                "category",
-                "content_rating",
-                "current_ver",
-                "genres",
-                "installs",
-                "last_updated",
-                "price",
-                "rating",
-                "reviews",
-                "size",
-                "type"
-            ],
             "properties": {
-                "android_ver": {
-                    "type": "string"
+                "valid": {
+                    "type": "boolean"
                 },
-                "app": {
-                    "type": "string"
-                },
-                "category": {
-                    "type": "string"
-                },
-                "content_rating": {
-                    "type": "string"
-                },
-                "current_ver": {
-                    "type": "string"
-                },
-                "genres": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "installs": {
-                    "type": "string"
-                },
-                "last_updated": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "string"
-                },
-                "rating": {
+                "value": {
                     "type": "number"
-                },
-                "reviews": {
-                    "type": "integer"
-                },
-                "size": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
                 }
             }
         },
@@ -507,10 +94,10 @@
                     "type": "string"
                 },
                 "sentiment_polarity": {
-                    "type": "number"
+                    "$ref": "#/definitions/models.NullableFloat64"
                 },
                 "sentiment_subjectivity": {
-                    "type": "number"
+                    "$ref": "#/definitions/models.NullableFloat64"
                 },
                 "translated_review": {
                     "type": "string"
